# Trackmed

./: .env.docker  .gitignore  Anchor.toml  Cargo.toml  README.md  create-manufacturer.js  docker-compose.prod.yml  docker-compose.yml  lib.rs  package-lock.json  package.json  tsconfig.json
admin-be/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
admin-be/prisma/: schema.prisma
admin-be/scripts/: create-test-users.js  create-test-users.sh  generate-jwt.js  send-chat.js  send-chat.sh  send-location.js  send-location.sh  test-chat-admin.js  test-ws.js  test-ws.sh
admin-be/src/: index.ts
admin-be/src/__tests__/: sanitization.test.ts
admin-be/src/config/: solana.ts
admin-be/src/idl/: solana_test_project.ts
apps/admin-fe/: next.config.ts  package-lock.json  package.json
apps/manufacturer-fe/: package-lock.json  package.json
apps/user-app/: README.md
nginx/: nginx.conf
programs/solana_test_project/: Cargo.toml
services/admin-be/: .env.example  README.md  bs58.d.ts  create-manufacturer.js  jest.config.js  package-lock.json  package.json  test-chat-api.js  test-key.js
services/user-be/: .dockerignore  README.md  package-lock.json  package.json
services/websocket/: .env.example  README.md  package.json
tests/: solana_test_project.ts
user-be/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json
user-be/src/: index.ts
websocket/: Dockerfile  package-lock.json  package.json  tsconfig.json
websocket/src/: client-manager.ts  config.ts  handlers.ts  index.ts  logger.ts  types.ts
(+218 files in other folders)
