[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
# Use "thin" LTO instead of "fat" for faster builds (slightly larger binary)
lto = "thin"
# Increase codegen units for parallel compilation (faster builds)
codegen-units = 16
incremental = true
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 16
